# azure-debug-relay

./: .amlignore  .env.sample  .gitignore  .vscodeignore  LICENSE  Makefile  README.md  make.vsix.sh  package-lock.json  package.json  pyproject.toml  remote_server_demo.py  tsconfig.json
azdebugrelay/: __init__.py  azrelay.py  debug_relay.py  debugpyex.py  debugpyman.py  test.py  threads.py
env_tf/: azureml_environment.json  conda_dependencies.yml
samples/: README.md
samples/aml/steps/: train.py
samples/azure_ml/: deploy.py
samples/azure_ml/steps/: train.py
samples/azure_ml_advanced/: README.md  publish_pipeline.py  remote_pipeline_demo.py
samples/azure_ml_advanced/steps/: debug_utils.py  mpi_step.py  parallel_step.py  single_step.py
samples/azure_ml_advanced/steps/amldebugutils/: __init__.py  debugutils.py
samples/azure_ml_advanced/steps/mpi/: __init__.py  mpi_step.py  mpi_step_starter.py
samples/azure_ml_simple/: README.md  deploy_and_run.py
samples/azure_ml_simple/steps/: train.py
samples/ml_pipeline_demo/: publish_pipeline.py  remote_pipeline_demo.py
samples/ml_pipeline_demo/steps/: mpi_step.py  parallel_step.py  single_step.py
samples/simple_demo/: README.md  remote_server_demo.py
vscode-extension/: extension.ts
