[tool.poetry]
name = "azure-debug-relay"
version = "0.4.1"
description = "Cross-network remote debugging for Python"
authors = ["Vlad Kolesnikov"]
readme = "README.md"
license = "MIT"
keywords = ["debug", "remote", "azure"]
packages = [{include = "azdebugrelay"}]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
debugpy = { version = "^1.2.1" }

[tool.poetry.dev-dependencies]
pytest = "^6.1"

#[tool.poetry.scripts]
#azdebugrelay = "azdebugrelay.debug_relay:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"